...
            "state" : "translated",
            "value" : "Copiar Título de Tarea"
          }
        }
      }
    },
    "Create New ToDo" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Create New ToDo"
          }
...
            "state" : "translated",
            "value" : "Crear Nueva Tarea"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
...
            "state" : "translated",
            "value" : "Ingrese la descripción de la tarea aquí"
          }
        }
      }
    },
    "Enter the ToDo title here" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter the ToDo title here"
          }
...
            "state" : "translated",
            "value" : "Ingrese el título de la tarea aquí"
          }
        }
      }
    },
    "Filter" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filter"
          }
...
            "state" : "translated",
            "value" : "Filtrar Tareas"
          }
        }
      }
    },
    "Filters" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filters"
          }
...
            "state" : "translated",
            "value" : "Filtros"
          }
        }
      }
    },
    "High" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "High"
          }
...
            "state" : "translated",
            "value" : "Llave"
          }
        }
      }
    },
    "Locked" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Locked"
          }
...
            "state" : "translated",
            "value" : "No hecha"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
...
            "state" : "translated",
            "value" : "Renombrar etiqueta"
          }
        }
      }
    },
    "Show awards" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Show awards"
          }
...
            "state" : "translated",
            "value" : "Título"
          }
        }
      }
    },
    "ToDos" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ToDos"
          }
...
